# Serendipity-Finder

./: .gitignore  CONTRIBUTING.md  Dockerfile  ETHICAL_IMPACT.md  Makefile  README.md  SECURITY.md  docker-compose.yml  docker_compose.txt  dockerfile.txt  environment.yml  github_actions.txt  gitignore.txt  makefile.txt  pyproject.toml  pytest_ini.txt  requirements.txt  requirements_minimal.txt  serendipity.html  serendipity_discoveries.csv  serendipity_finder.py  serendipity_finder_v2.py  test_serendipity.py
.github/workflows/: ci.yml  deploy.yml  main.yml
