[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serendipity-finder"
version = "3.0.0"
description = "Pattern discovery in distribution extremes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cazandra Aporbo", email = "loopchii.tech@gmail.com"}
]
keywords = ["statistics", "correlation", "tail-analysis", "data-science", "outliers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scipy>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Cazzy-Aporbo/Serendipity-Finder"
Documentation = "https://github.com/Cazzy-Aporbo/Serendipity-Finder#readme"
Repository = "https://github.com/Cazzy-Aporbo/Serendipity-Finder"
Issues = "https://github.com/Cazzy-Aporbo/Serendipity-Finder/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=serendipity_finder --cov-report=term-missing"
